--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <title>The Story of 8</title>
-<meta name="Keywords" content="Authored in MathBook XML">
+<meta name="description" content="The Story of 8" />    
+<meta name="Keywords" content="Story of 8, Hitchman, Authored in MathBook XML, ">
 <meta name="viewport" content="width=device-width,  initial-scale=1.0, user-scalable=0, minimum-scale=1.0, maximum-scale=1.0">
 <script type="text/javascript" src="https://sagecell.sagemath.org/static/jquery.min.js"></script><script type="text/x-mathjax-config">
 MathJax.Hub.Config({
