--- a/index.html
+++ b/index.html
@@ -77,5 +77,11 @@ MathJax.Hub.Config({
 </div></aside><main class="main"><div id="content" class="mathbook-content"><section class="article" id="index"><nav class="summary-links"><a href="frontmatter.html"><span class="title">Abstract</span></a><a href="section-introduction-to-8.html"><span class="codenumber">1</span><span class="title">An Introduction to 8</span></a><a href="section-ancient-8.html"><span class="codenumber">2</span><span class="title">Ancient 8</span></a><a href="section-medieval-8.html"><span class="codenumber">3</span><span class="title">Medieval 8</span></a><a href="section-revolutionary-8.html"><span class="codenumber">4</span><span class="title">Revolutionary 8</span></a><a href="section-romantic-8.html"><span class="codenumber">5</span><span class="title">Romantic 8</span></a><a href="section-modern-8.html"><span class="codenumber">6</span><span class="title">Modern 8</span></a><a href="section-ubiquitous-8.html"><span class="codenumber">7</span><span class="title">Ubiquitous 8</span></a><a href="section-conclusion.html"><span class="codenumber">8</span><span class="title">Concluding Remarks</span></a><a href="backmatter-1.html"><span class="title">References</span></a></nav></section></div></main>
 </div>
 <script type="text/javascript">createAllVisualizersFromHtmlAttrs();</script>
+    <!-- Start of StatCounter Code for Default Guide --> <script type="text/javascript"> var sc_project=11625953; var sc_invisible=1; var sc_security="f68ed8d5"; </script> <script type="text/javascript"
+src="https://www.statcounter.com/counter/counter.js" async></script> <noscript><div class="statcounter"><a title="site stats"
+href="http://statcounter.com/" target="_blank"><img class="statcounter"
+src="//c.statcounter.com/11625953/0/f68ed8d5/1/" alt="site stats"></a></div></noscript>
+<!-- End of StatCounter Code for Default Guide -->
+
 </body>
 </html>
