--- a/frontmatter.html
+++ b/frontmatter.html
@@ -82,5 +82,10 @@ MathJax.Hub.Config({
 <p id="p-2">A portion of this story appeared in <a knowl="./knowl/biblio-hitch-8.html" knowl-id="xref-biblio-hitch-8" alt="Bibliographic Entry 5 The Story of \(8\)" title="Bibliographic Entry 5 The Story of \(8\)">[5]</a>, and a printable version to match this full online story can be found here: <a class="external-url" href="http://mphitchman.com/eight/eight.pdf" target="_blank">http://mphitchman.gihub.io/eight/eight.pdf</a>.</p></section></div></main>
 </div>
 <script type="text/javascript">createAllVisualizersFromHtmlAttrs();</script>
+        <!-- Start of StatCounter Code for Default Guide --> <script type="text/javascript"> var sc_project=11625953; var sc_invisible=1; var sc_security="f68ed8d5"; </script> <script type="text/javascript"
+src="https://www.statcounter.com/counter/counter.js" async></script> <noscript><div class="statcounter"><a title="site stats"
+href="http://statcounter.com/" target="_blank"><img class="statcounter"
+src="//c.statcounter.com/11625953/0/f68ed8d5/1/" alt="site stats"></a></div></noscript>
+<!-- End of StatCounter Code for Default Guide -->
 </body>
 </html>
