--- a/backmatter-1.html
+++ b/backmatter-1.html
@@ -85,5 +85,10 @@ MathJax.Hub.Config({
 </div></article><article class="bib" id="biblio-Mom"><div class="bibitem">[6]</div>  <div class="bibentry">Stuart Hollingdale, <i>Makers of Mathematics</i>. Penguin Books, London, 1989.</div></article><article class="bib" id="biblio-phi"><div class="bibitem">[7]</div>  <div class="bibentry">Mario Livio, <i>The golden ratio: The story of phi, the world's most astonishing number</i>.Broadway Books, 2008.</div></article><article class="bib" id="biblio-0"><div class="bibitem">[8]</div>  <div class="bibentry">Charles Seife, <i>Zero: The Biography of a Dangerous Idea</i>. Penguin Books, 2000.</div></article></section></section></div></main>
 </div>
 <script type="text/javascript">createAllVisualizersFromHtmlAttrs();</script>
+        <!-- Start of StatCounter Code for Default Guide --> <script type="text/javascript"> var sc_project=11625953; var sc_invisible=1; var sc_security="f68ed8d5"; </script> <script type="text/javascript"
+src="https://www.statcounter.com/counter/counter.js" async></script> <noscript><div class="statcounter"><a title="site stats"
+href="http://statcounter.com/" target="_blank"><img class="statcounter"
+src="//c.statcounter.com/11625953/0/f68ed8d5/1/" alt="site stats"></a></div></noscript>
+<!-- End of StatCounter Code for Default Guide -->
 </body>
 </html>
