--- a/section-ancient-8.html
+++ b/section-ancient-8.html
@@ -101,5 +101,10 @@ MathJax.Hub.Config({
 <p id="p-31">The Pythagoreans may not have done much for \(8\) directly beyond giving it the dubious distinction of being male, but they did introduce to the world the idea that some numbers are more dangerous than others.  Numbers, up to the time of Pythagoras, were viewed for their quantity.  Now they were encouraged to assert their <!--Style me with CSS--><em>quality</em>; \(8\) could begin in earnest its ascent to a position of dominance in the number line.   It did not take long.</p></section></div></main>
 </div>
 <script type="text/javascript">createAllVisualizersFromHtmlAttrs();</script>
+       <!-- Start of StatCounter Code for Default Guide --> <script type="text/javascript"> var sc_project=11625953; var sc_invisible=1; var sc_security="f68ed8d5"; </script> <script type="text/javascript"
+src="https://www.statcounter.com/counter/counter.js" async></script> <noscript><div class="statcounter"><a title="site stats"
+href="http://statcounter.com/" target="_blank"><img class="statcounter"
+src="//c.statcounter.com/11625953/0/f68ed8d5/1/" alt="site stats"></a></div></noscript>
+<!-- End of StatCounter Code for Default Guide --> 
 </body>
 </html>
