--- a/section-medieval-8.html
+++ b/section-medieval-8.html
@@ -88,5 +88,10 @@ A = \{F_n ~|~ F_n - n \text{ is a prime factor of } F_n\},
 <figure class="figure-like" id="figure-tiling"><object type="image/svg+xml" style="width:80%; margin:auto; display:block;" data="images/2by5.svg" alt="The figure for the splitting of the chocolate"><p style="margin:auto">&lt;&lt;SVG image is unavailable, or your browser cannot render it&gt;&gt;</p></object><figcaption><span class="heading">Figure</span><span class="codenumber">3.1</span>The \(2 \times 5\) grid has \(8\) tilings by dominoes.</figcaption></figure></section></div></main>
 </div>
 <script type="text/javascript">createAllVisualizersFromHtmlAttrs();</script>
+    <!-- Start of StatCounter Code for Default Guide --> <script type="text/javascript"> var sc_project=11625953; var sc_invisible=1; var sc_security="f68ed8d5"; </script> <script type="text/javascript"
+src="https://www.statcounter.com/counter/counter.js" async></script> <noscript><div class="statcounter"><a title="site stats"
+href="http://statcounter.com/" target="_blank"><img class="statcounter"
+src="//c.statcounter.com/11625953/0/f68ed8d5/1/" alt="site stats"></a></div></noscript>
+<!-- End of StatCounter Code for Default Guide -->
 </body>
 </html>
