--- a/section-modern-8.html
+++ b/section-modern-8.html
@@ -94,5 +94,10 @@ H^2 = 8G\frac{\pi}{3}\rho - \frac{k}{a^2}.
 -1,0,\) or \(1\) is the curvature constant (\(k = -1\) corresponds to hyperbolic geometry, \(k=0\) to Euclidean, and \(k = +1\) to elliptic);  \(G\) is Newton's gravitational constant; \(a\) is a scale factor; and \(\pi/3\) is practically just 1. Notice, please, the central role that \(8\) plays in this fundamental description of the universe on a global scale.</p></section></div></main>
 </div>
 <script type="text/javascript">createAllVisualizersFromHtmlAttrs();</script>
+        <!-- Start of StatCounter Code for Default Guide --> <script type="text/javascript"> var sc_project=11625953; var sc_invisible=1; var sc_security="f68ed8d5"; </script> <script type="text/javascript"
+src="https://www.statcounter.com/counter/counter.js" async></script> <noscript><div class="statcounter"><a title="site stats"
+href="http://statcounter.com/" target="_blank"><img class="statcounter"
+src="//c.statcounter.com/11625953/0/f68ed8d5/1/" alt="site stats"></a></div></noscript>
+<!-- End of StatCounter Code for Default Guide -->
 </body>
 </html>
