--- a/section-romantic-8.html
+++ b/section-romantic-8.html
@@ -290,5 +290,10 @@ MathJax.Hub.Config({
 <p id="p-70">What this means, as Cantor realized, is that while both sets are infinite, the set \(\mathbb{S}\) is larger.    Thus did \(8\) and Cantor introduce us to different sizes of infinity, prompting David Hilbert to write in his 1926 paper <!--Style me with CSS--><em>Uber das Unendliche</em> <a knowl="./knowl/biblio-hilbert.html" knowl-id="xref-biblio-hilbert" alt="Bibliographic Entry 3 Uber das Unendliche" title="Bibliographic Entry 3 Uber das Unendliche">[3]</a>,  “Aus dem Paradies, das Cantor uns geschaffen, soll uns niemand vertreiben konnen.”  My translation reads: “No one shall expel us from the paradise that Cantor and \(8\) have created.”</p></section></div></main>
 </div>
 <script type="text/javascript">createAllVisualizersFromHtmlAttrs();</script>
+      <!-- Start of StatCounter Code for Default Guide --> <script type="text/javascript"> var sc_project=11625953; var sc_invisible=1; var sc_security="f68ed8d5"; </script> <script type="text/javascript"
+src="https://www.statcounter.com/counter/counter.js" async></script> <noscript><div class="statcounter"><a title="site stats"
+href="http://statcounter.com/" target="_blank"><img class="statcounter"
+src="//c.statcounter.com/11625953/0/f68ed8d5/1/" alt="site stats"></a></div></noscript>
+<!-- End of StatCounter Code for Default Guide -->  
 </body>
 </html>
